Z-index fixes

--- a/public/blocks/chat/chat.scss
+++ b/public/blocks/chat/chat.scss
@@ -124,7 +124,7 @@
     top: $re--large-padding;
     bottom: 0;
     transform: translateX(100%);
-    z-index: $z-index-mobile-screen;
+    z-index: $z-index-header;
     max-height: none;
 
     &_active {
