--- a/public/blocks/header/header.scss
+++ b/public/blocks/header/header.scss
@@ -132,7 +132,7 @@ $header-icon-width: 20px;
         width: $header-height;
         height: $header-height;
         position: absolute;
-        z-index: $z-index-header;
+        z-index: $z-index-snackbar;
         top: 0;
         right: 11px;
         padding: 0;
