--- a/public/blocks/modal-window/modal-window.scss
+++ b/public/blocks/modal-window/modal-window.scss
@@ -2,11 +2,13 @@
 
 .modal {
   &__bg {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, .7);
     display: flex;
     justify-content: center;
